--- a/package.json
+++ b/package.json
@@ -14,5 +14,24 @@
     "debug": "~2.0.0",
     "jade": "~1.6.0",
     "less-middleware": "1.0.x"
-  }
+  },
+  "description": "A service for finding siteswap-bot GIFs on imgur by name.",
+  "main": "app.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:jimlloyd/siteswap.info.git"
+  },
+  "keywords": [
+    "siteswap",
+    "bot",
+    "imgur",
+    "indexer"
+  ],
+  "author": "Jim Lloyd <jim.lloyd@gmail.com>",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/jimlloyd/siteswap.info/issues"
+  },
+  "homepage": "https://github.com/jimlloyd/siteswap.info"
 }
