--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "express": "~4.9.0",
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
-    "morgan": "~1.3.0",
-    "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
+    "express": "~4.9.0",
     "jade": "~1.6.0",
-    "less-middleware": "1.0.x"
+    "less-middleware": "1.0.x",
+    "lodash": "^2.4.1",
+    "morgan": "~1.3.0",
+    "serve-favicon": "~2.1.3"
   },
   "description": "A service for finding siteswap-bot GIFs on imgur by name.",
   "main": "app.js",
