--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "siteswap.info",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "0.10.x"
+  },
   "scripts": {
     "start": "node ./bin/www"
   },
