--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "less-middleware": "1.0.x",
     "lodash": "^2.4.1",
     "morgan": "~1.3.0",
+    "q": "^1.0.1",
+    "request": "^2.44.0",
     "serve-favicon": "~2.1.3"
   },
   "description": "A service for finding siteswap-bot GIFs on imgur by name.",
